third_party/yolov5vision/lib/vision_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/vision.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class VisionBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VisionBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VisionBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int yolov5ncnn_init() {
    return _yolov5ncnn_init();
  }

  late final _yolov5ncnn_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('yolov5ncnn_init');
  late final _yolov5ncnn_init =
      _yolov5ncnn_initPtr.asFunction<int Function()>();

  int yolov5ncnn_set_backend(
    int backend,
    ffi.Pointer<ffi.Char> model_dir,
  ) {
    return _yolov5ncnn_set_backend(backend, model_dir);
  }

  late final _yolov5ncnn_set_backendPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'yolov5ncnn_set_backend');
  late final _yolov5ncnn_set_backend = _yolov5ncnn_set_backendPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> yolov5ncnn_detect_pixie_json(
    ffi.Pointer<ffi.Uint8> pixels,
    int w,
    int h,
  ) {
    return _yolov5ncnn_detect_pixie_json(
      pixels,
      w,
      h,
    );
  }

  late final _yolov5ncnn_detect_pixie_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>, ffi.Int,
              ffi.Int)>>('yolov5ncnn_detect_pixie_json');
  late final _yolov5ncnn_detect_pixie_json =
      _yolov5ncnn_detect_pixie_jsonPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>, int, int)>();

  ffi.Pointer<ffi.Char> yolov5ncnn_detect_pixie_fen(
    ffi.Pointer<ffi.Uint8> pixels,
    int w,
    int h,
  ) {
    return _yolov5ncnn_detect_pixie_fen(
      pixels,
      w,
      h,
    );
  }

  late final _yolov5ncnn_detect_pixie_fenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>, ffi.Int,
              ffi.Int)>>('yolov5ncnn_detect_pixie_fen');
  late final _yolov5ncnn_detect_pixie_fen =
      _yolov5ncnn_detect_pixie_fenPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>, int, int)>();

  ffi.Pointer<ffi.Char> yolov5ncnn_detect_file_json(
    ffi.Pointer<ffi.Uint8> file,
    int length,
  ) {
    return _yolov5ncnn_detect_file_json(
      file,
      length,
    );
  }

  late final _yolov5ncnn_detect_file_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Uint8>, ffi.Int)>>('yolov5ncnn_detect_file_json');
  late final _yolov5ncnn_detect_file_json =
      _yolov5ncnn_detect_file_jsonPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>, int)>();

  ffi.Pointer<ffi.Char> yolov5ncnn_detect_file_fen(
    ffi.Pointer<ffi.Uint8> file,
    int length,
  ) {
    return _yolov5ncnn_detect_file_fen(
      file,
      length,
    );
  }

  late final _yolov5ncnn_detect_file_fenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Uint8>, ffi.Int)>>('yolov5ncnn_detect_file_fen');
  late final _yolov5ncnn_detect_file_fen =
      _yolov5ncnn_detect_file_fenPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>, int)>();

  void free_string(
    ffi.Pointer<ffi.Char> arg0,
  ) {
    return _free_string(
      arg0,
    );
  }

  late final _free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'free_string');
  late final _free_string =
      _free_stringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}
